--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
     <spring-boot-starter-validation.version>3.2.1</spring-boot-starter-validation.version>
     <commons-collections4.version>4.1</commons-collections4.version>
+    <mybatis-spring-boot-starter-test.version>2.2.0</mybatis-spring-boot-starter-test.version>
 
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
@@ -179,6 +180,14 @@
       <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter-test</artifactId>
+      <version>${mybatis-spring-boot-starter-test.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
