--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <spring-boot-starter-validation.version>3.2.1</spring-boot-starter-validation.version>
     <commons-collections4.version>4.1</commons-collections4.version>
     <mybatis-spring-boot-starter-test.version>2.2.0</mybatis-spring-boot-starter-test.version>
+    <flywaydb.version>9.22.3</flywaydb.version>
 
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
@@ -188,6 +189,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>${flywaydb.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -244,6 +252,28 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.3.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>${flywaydb.version}</version>
+        <configuration>
+          <url>jdbc:postgresql://localhost:5432/sample</url>
+          <user>user</user>
+          <password>password</password>
+          <locations>
+            <location>filesystem:./src/main/resources/db.migration</location>
+          </locations>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>migrate</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
