--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,2 +1,17 @@
 environment:
   baseUri: http://localhost:8080
+
+  spring:
+    datasource:
+      platform: h2
+      driver-class-name: org.h2.Driver
+      url: jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
+      username: sa
+      password: sa
+    flyway:
+      enabled: true
+      target: 1
+
+  mybatis:
+    configuration:
+      map-underscore-to-camel-case: true
