--- a/pom.xml
+++ b/pom.xml
@@ -278,28 +278,28 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.3.0</version>
       </plugin>
-<!--      <plugin>-->
-<!--        <groupId>org.flywaydb</groupId>-->
-<!--        <artifactId>flyway-maven-plugin</artifactId>-->
-<!--        <version>${flywaydb.version}</version>-->
-<!--        <configuration>-->
-<!--          <url>jdbc:postgresql://localhost:5432/sample</url>-->
-<!--          <user>user</user>-->
-<!--          <password>password</password>-->
-<!--&lt;!&ndash;          <locations>&ndash;&gt;-->
-<!--&lt;!&ndash;            <location>filesystem:./src/main/resources/db.migration</location>&ndash;&gt;-->
-<!--&lt;!&ndash;          </locations>&ndash;&gt;-->
-<!--        </configuration>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <id>test</id>-->
-<!--            <phase>test</phase>-->
-<!--            <goals>-->
-<!--              <goal>migrate</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>${flywaydb.version}</version>
+        <configuration>
+          <url>jdbc:postgresql://localhost:5432/sample</url>
+          <user>user</user>
+          <password>password</password>
+          <locations>
+            <location>filesystem:./src/main/resources/db/migration</location>
+          </locations>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>migrate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
