--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,37 +1,16 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/sample
-#    username: user
-#    password: password
-#    driver-class-name: org.postgresql.Driver
-#    type: com.zaxxer.hikari.HikariDataSource
-#    hikari:
-#      minimum-idle: 2
-#      maximum-pool-size: 5
-#  flyway:
-#    enabled: true
-#
-#mybatis:
-#  configuration:
-#    map-underscore-to-camel-case: true
-
-# DataSource
 spring:
   datasource:
-    url: ${EMPLOYEE_DB_URL}
-    username: ${EMPLOYEE_DB_USER}
-    password: ${EMPLOYEE_DB_PASS_WORD}
-    sql:
-      init:
-        mode: always
-    init:
-      encoding: utf-8
+    url: jdbc:postgresql://localhost:5432/sample
+    username: user
+    password: password
     driver-class-name: org.postgresql.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 5
+  flyway:
+    enabled: true
 
-# MyBatis
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  logging:
-    level:
-      com.example.infrastructure: debug
