--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -1,9 +1,9 @@
 # DataSource
 spring:
   datasource:
-    url: ${EMPLOYEE_DB_URL}
-    username: ${EMPLOYEE_DB_USER}
-    password: ${EMPLOYEE_DB_PASS_WORD}
+    url: jdbc:postgresql://dpg-cmucn3nqd2ns738i5t60-a.singapore-postgres.render.com:5432/employees_692r
+    username: tsudatomoki
+    password: mL9qq1TPdlUSoewoRDpBz0EOxJz5QxKq
     sql:
       init:
         mode: always
