--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## DataSource
-#spring.datasource.url=jdbc:postgresql://dpg-cmucn3nqd2ns738i5t60-a.singapore-postgres.render.com:5432/employees_692r
-#spring.datasource.username=tsudatomoki
-#spring.datasource.password=mL9qq1TPdlUSoewoRDpBz0EOxJz5QxKq
+#spring.datasource.url=${EMPLOYEE_DB_URL}
+#spring.datasource.username=${EMPLOYEE_DB_USER}
+#spring.datasource.password=${EMPLOYEE_DB_PASS_WORD}
 #spring.sql.init.mode=always
 #spring.sql.init.encoding=utf-8
 #spring.datasource.driver-class-name=org.postgresql.Driver
