--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/sample
-    username: user
-    password: password
+    url: ${EMPLOYEE_DB_URL:jdbc:postgresql://localhost:5432/sample}
+    username: ${EMPLOYEE_DB_USER:user}
+    password: ${EMPLOYEE_DB_PASS_WORD:password}
     driver-class-name: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
